--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -7,10 +7,18 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "node-telegram-bot-api": "^0.64.0",
+    "node-telegram-bot-api": "^0.66.0",
     "express": "^4.18.2",
     "axios": "^1.6.2",
     "pg": "^8.11.3"
+  },
+  "overrides": {
+    "form-data": "^4.0.0",
+    "request": {
+      "form-data": "^4.0.0",
+      "qs": "^6.11.0",
+      "tough-cookie": "^4.1.3"
+    }
   },
   "engines": {
     "node": ">=18"
